minor style change

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,5 +35,5 @@ body {
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
-  background-size: 50%;
+  background-size: cover;
 }
